force-app/main/default/objects/CC_Envio_Encuesta__c/CC_Envio_Encuesta__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Seteo de Link para LimeSurvey - Envío de encuestas (chat)</description>
    <label>CC_Envio_Encuesta</label>
</CustomObject>