force-app/main/default/objects/CC_Envio_Encuesta__c/fields/CC_Id_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>CC_Id_Encuesta__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC_Id_Encuesta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>