force-app/main/default/objects/CC_Envio_Encuesta__c/fields/CC_Link_LimeSurvey__c.field-meta.xml
<CustomField>
    <fullName>CC_Link_LimeSurvey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC_Link_LimeSurvey</label>
    <type>Url</type>
</CustomField>